--- a/composer.json
+++ b/composer.json
@@ -17,21 +17,22 @@
     ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^9.0"
+        "illuminate/contracts": "^9.0",
+        "spatie/laravel-package-tools": "^1.14.0"
     },
     "require-dev": {
+        "laravel/dusk": "^7.6",
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
         "orchestra/testbench": "^7.0",
+        "orchestra/testbench-dusk": "^7.22",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
-            "Nihilsen\\Cipher\\": "src",
-            "Nihilsen\\Cipher\\Database\\Factories\\": "database/factories"
+            "Nihilsen\\Cipher\\": "src"
         }
     },
     "autoload-dev": {
