--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,7 +22,7 @@
         <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF" />
     </php>
     <testsuites>
-        <testsuite name="Nihilsen Test Suite">
+        <testsuite name="Keypad Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
